# paramify-fetchers-distribute

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  manifest.yaml  pyproject.toml  requirements.txt  run_and_upload.sh
.claude/skills/create-fetcher/: SKILL.md
.claude/skills/suggest-validator/: SKILL.md
.claude/skills/wire-manifest/: SKILL.md
comparators/_template/: README.md
deploy/: .env.example  Dockerfile  README.md  crontab  docker-compose.yml  entrypoint.sh  run-and-upload.sh
deploy/k8s/: AWS_MULTI_ACCOUNT.md  LOCAL_K8S.md  cronjob-aws.yaml  cronjob.yaml
docs/: authoring_a_fetcher.md  config_injection_design.md  design.md  distribution_design.md  envelope_design.md  fetcher_contract.md  handoff.md  packaging_design.md  porting_playbook.md  releasing.md  run_manifest_reference.md  tui_design.md
docs/onboarding/: README.md
docs/onboarding/paramify-fetchers-onboarding/: part-01.md  part-02.md
fetchers/_categories/: aws.yaml
fetchers/aws/_shared/: aws.sh
fetchers/aws/auto_scaling_high_availability/: fetcher.sh  fetcher.yaml
fetchers/aws/backup_recovery_high_availability/: fetcher.sh  fetcher.yaml
fetchers/aws/backup_validation/: fetcher.sh  fetcher.yaml
fetchers/aws/block_storage_encryption_status/: fetcher.sh  fetcher.yaml
fetchers/aws/cloudtrail_configuration/: fetcher.sh  fetcher.yaml
fetchers/aws/cloudwatch_high_availability/: fetcher.sh  fetcher.yaml
fetchers/aws/component_ssl_enforcement_status/: fetcher.sh  fetcher.yaml
fetchers/aws/guard_duty/: fetcher.sh  (+1 more)
framework/: api.py  cli.py
framework/runner/: __init__.py  executor.py
framework/tui/: __init__.py  __main__.py  app.py  modals.py  render.py  welcome_demo.py
framework/web/: __main__.py
tests/: test_cli.py  test_tui_welcome.py
tools/: gen_ksi_coverage.py
uploaders/paramify_evidence/: uploader.py
uploaders/paramify_issues/: README.md
(+58 files in other folders)
